--- a/iphone/webui/themes/iphone/c/main.css
+++ b/iphone/webui/themes/iphone/c/main.css
@@ -88,6 +88,7 @@ body.landscape .toolbar > h1 {
 	z-index: 1;
 
 	width: auto;
+	min-width: 18px;
 	height: 30px;
 	margin: 0;
 	padding: 0 3px;
@@ -100,6 +101,7 @@ body.landscape .toolbar > h1 {
 	text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0;
 	text-overflow: ellipsis;
 	text-decoration: none;
+	text-align: center;
 	white-space: nowrap;
 
 	color: #fff;
@@ -117,7 +119,11 @@ body.landscape .toolbar > h1 {
 .toolbar > .button.blue.focus {
 	-webkit-border-image: url(../i/t/button-focus.png) 0 5 0 5;
 }
-
+.toolbarButton.left, 
+.toolbar > .button.left {
+	left: 6px;
+	right: auto;
+}
 body > .toolbar > #backButton {
 	display: none;
 
