--- a/iphone/webui/themes/iphone/c/main.css
+++ b/iphone/webui/themes/iphone/c/main.css
@@ -611,6 +611,16 @@ body.offline #remote .toolbar {
 #remote .toolbar .button.enabled {
 	-webkit-border-image: url(../i/c/button-focus.png) 0 5 0 5;
 }
+#remote #buttons .group embed {
+    width: 17px;
+    height: 17px;
+    padding-top: 5px;
+}
+#remote #buttons .group.large embed {
+    width: 17px;
+    height: 17px;
+    padding-top: 5px;
+}
 #remote .toolbar h1 {
 	text-shadow: rgba(0, 0, 0, 0.4) 0px -1px 0;
     color: #fff;
